# GeoShoot

./: .gitignore  CMakeLists.txt  Disclaimer.txt  LICENSE  README.md
App/: Regions.cpp  main.cpp
GeoShoot/: CMakeLists.txt  Calculus.cpp  Calculus.hpp  FFTConvolver.cpp  FFTConvolver.hpp  GPU.cpp  GPU.hpp  GPUVectorField.hpp  GeoShoot.cpp  GeoShoot.hpp  Matrix.cpp  Matrix.hpp  OpenCL.cl  VectorField.cpp  VectorField.hpp
include/clFFT/: clFFT.version.h
include/niftilib/: nifti1.h  nifti1_io.c  nifti1_io.h
include/znzlib/: config.h  znzlib.c  znzlib.h
